Infrastructure/K8SConfig/istiogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nowleave-gateway
  namespace: nowleave
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.nowleave.com"
    - "www.nowleave.com"
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nowleave-api
  namespace: nowleave
spec:
  hosts:
  - "*"
  gateways:
  - nowleave-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 80
        host: nowleave-api.nowleave.svc.cluster.local
